[gd_scene load_steps=4 format=3 uid="uid://dvob3mx2mmah6"]

[ext_resource type="Script" path="res://scripts/bhv_container.gd" id="1_405xt"]
[ext_resource type="Texture2D" uid="uid://bof7512r1lu8i" path="res://sprites/containers/spr_container.png" id="2_8tlsa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xshy5"]
size = Vector2(114, 74)

[node name="ObjContainer" type="Node2D"]
script = ExtResource("1_405xt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8tlsa")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_xshy5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -57.0
offset_top = -37.0
offset_right = 57.0
offset_bottom = 37.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="StockLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -27.0
offset_right = 20.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
